--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -47,33 +47,33 @@ jobs:
         run: mvn -B compile jib:build -Dimage=ghcr.io/fred4jupiter/fredbet:latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  build_push_docker_hub_amd64:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v3
-      - name: Set up JDK 17 for deploy to Docker Hub
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '17'
-          server-id: docker.io
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Publish to Docker Hub
-        run: mvn -B compile jib:build -Dimage=docker.io/fred4jupiter/fredbet:latest
-  build_push_docker_hub_arm64:
+#  build_push_docker_hub_amd64:
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#      - name: Checkout the code
+#        uses: actions/checkout@v3
+#      - name: Set up JDK 17 for deploy to Docker Hub
+#        uses: actions/setup-java@v2
+#        with:
+#          distribution: 'adopt'
+#          java-version: '17'
+#          server-id: docker.io
+#      - name: Cache local Maven repository
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.m2/repository
+#          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-maven-
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v1
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_TOKEN }}
+#      - name: Publish to Docker Hub
+#        run: mvn -B compile jib:build -Dimage=docker.io/fred4jupiter/fredbet:latest
+  build_push_docker_hub_buildx:
     runs-on: ubuntu-18.04
     needs: build
     env:
@@ -81,7 +81,6 @@ jobs:
       DOCKER_IMAGE: fred4jupiter/fredbet
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
-      DOCKER_TARGET_PLATFORM: linux/arm64/v8
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -91,18 +90,17 @@ jobs:
         if: success()
         id: prepare
         run: |
-          echo ::set-output name=docker_platform::${DOCKER_TARGET_PLATFORM}
           echo ::set-output name=docker_image::${DOCKER_REGISTRY}/${DOCKER_IMAGE}
-          echo ::set-output name=docker_version::latest-arm64
       - name: Docker Login
         if: success()
         run: |
           echo "${DOCKER_PASSWORD}" | docker login ${DOCKER_REGISTRY} --username "${DOCKER_USERNAME}" --password-stdin
-      - name: Run Buildx (push image)
+      - name: Build image with buildx
         if: success()
         run: |
           docker buildx build \
-            --platform ${{ steps.prepare.outputs.docker_platform }} \
-            --tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.docker_version }} \
-            --file ./Dockerfile-arm \
+            --platform linux/arm64/v8,linux/amd64 \
+            --tag ${{ steps.prepare.outputs.docker_image }}:latest \
+            --tag ${{ steps.prepare.outputs.docker_image }}:latest \
+            --file ./Dockerfile-buildx \
             --output type=image,push=true .
