--- a/Dockerfile-buildx
+++ b/Dockerfile-buildx
@@ -1,5 +1,5 @@
 # Step : Test and package
-FROM arm64v8/maven:3.8.4-openjdk-17 as builder
+FROM maven:3.8.5-openjdk-17 as builder
 WORKDIR /build
 COPY pom.xml .
 
@@ -8,7 +8,7 @@ COPY .git /build/.git/
 RUN mvn -B -DskipTests package
 
 # Step : Package image
-FROM arm64v8/eclipse-temurin:17-jre-focal
+FROM eclipse-temurin:17-jre-focal
 LABEL maintainer="Michael Staehler"
 
 VOLUME /tmp
