--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -24,6 +24,11 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn -B verify
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-binary
+          path: target/fredbet.jar
   build_push_ghcr_amd64:
     runs-on: ubuntu-latest
     needs: build
@@ -59,9 +64,10 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
-      - uses: satackey/action-docker-layer-caching@v0.0.11
-        # Ignore the failure of a step and avoid terminating the job.
-        continue-on-error: true
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: app-binary
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Prepare
@@ -81,5 +87,5 @@ jobs:
           docker buildx build \
             --platform ${{ steps.prepare.outputs.docker_platform }} \
             --tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} \
-            --file ./Dockerfile-buildx \
+            --file ./Dockerfile-simple \
             --output type=image,push=true .
