--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -68,6 +68,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: app-binary
+          path: target/fredbet.jar
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Prepare
