--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Build with Maven
         run: mvn -B verify
       - name: Upload artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: app-binary
-          path: target/fredbet.jar
+          path: target/
   build_push_ghcr_amd64:
     runs-on: ubuntu-latest
     needs: build
@@ -65,10 +65,10 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v3
       - name: Download artifacts
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: app-binary
-          path: target/fredbet.jar
+          path: target/
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Prepare
