--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: app-binary
-          path: ${{ github.workspace }}/target/fredbet.jar
+          path: target/fredbet.jar
   build_push_ghcr_amd64:
     runs-on: ubuntu-latest
     needs: build
@@ -68,7 +68,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: app-binary
-          path: ${{ github.workspace }}/target/fredbet.jar
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Prepare
