--- a/Dockerfile-simple
+++ b/Dockerfile-simple
@@ -7,5 +7,5 @@ ENV JAVA_OPTS="-Duser.timezone=Europe/Berlin"
 
 EXPOSE 8080
 
-COPY target/fredbet.jar fredbet.jar
+COPY fredbet.jar fredbet.jar
 CMD exec java $JAVA_OPTS -jar fredbet.jar
