--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -24,11 +24,17 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn -B verify
+      - name: Extract jar for layered image building
+        run: java -Djarmode=layertools -jar target/fredbet.jar extract
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: app-binary
-          path: target/fredbet.jar
+          path: |
+            dependencies/
+            spring-boot-loader/
+            snapshot-dependencies/
+            application/
   build_push_ghcr_amd64:
     runs-on: ubuntu-latest
     needs: build
@@ -87,5 +93,5 @@ jobs:
           docker buildx build \
             --platform ${{ steps.prepare.outputs.docker_platform }} \
             --tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} \
-            --file ./Dockerfile-simple \
+            --file ./Dockerfile-simple-layered \
             --output type=image,push=true .
