--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -35,6 +35,7 @@ jobs:
             spring-boot-loader/
             snapshot-dependencies/
             application/
+          retention-days: 5
   build_push_ghcr_amd64:
     runs-on: ubuntu-latest
     needs: build
@@ -77,7 +78,7 @@ jobs:
       - name: Create missing directories
         run: mkdir -p snapshot-dependencies
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Prepare
         if: success()
         id: prepare
