--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -36,30 +36,30 @@ jobs:
             snapshot-dependencies/
             application/
           retention-days: 5
-  build_push_ghcr_amd64:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v3
-      - name: Set up JDK 17 for deploy to GitHub Container Registry
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '17'
-          server-id: ghcr.io
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Publish to GitHub Container Registry
-        run: mvn -B compile jib:build -Dmaven.test.skip=true -Dimage=ghcr.io/fred4jupiter/fredbet:latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  build_push_docker_hub_buildx:
+#  build_push_ghcr_amd64:
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#      - name: Checkout the code
+#        uses: actions/checkout@v3
+#      - name: Set up JDK 17 for deploy to GitHub Container Registry
+#        uses: actions/setup-java@v2
+#        with:
+#          distribution: 'adopt'
+#          java-version: '17'
+#          server-id: ghcr.io
+#      - name: Cache local Maven repository
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.m2/repository
+#          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-maven-
+#      - name: Publish to GitHub Container Registry
+#        run: mvn -B compile jib:build -Dmaven.test.skip=true -Dimage=ghcr.io/fred4jupiter/fredbet:latest
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  build_push_buildx:
     runs-on: ubuntu-latest
     needs: build
     env:
@@ -98,3 +98,15 @@ jobs:
             --tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} \
             --file ./Dockerfile-simple-layered \
             --output type=image,push=true .
+      - name: Login to GitHub Container Registry
+        if: success()
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish image to GitHub Container Registry
+        if: success()
+        run: |
+          docker tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} ghcr.io/fred4jupiter/fredbet:${{ steps.prepare.outputs.version }}
+          docker push ghcr.io/fred4jupiter/fredbet:${{ steps.prepare.outputs.version }}
