--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -63,10 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      DOCKER_REGISTRY: docker.io
       DOCKER_IMAGE: fred4jupiter/fredbet
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
       DOCKER_TARGET_PLATFORM: linux/arm64/v8,linux/amd64
     steps:
       - name: Checkout the code
@@ -84,18 +81,22 @@ jobs:
         id: prepare
         run: |
           echo ::set-output name=docker_platform::${DOCKER_TARGET_PLATFORM}
-          echo ::set-output name=docker_image::${DOCKER_REGISTRY}/${DOCKER_IMAGE}
+          echo ::set-output name=docker_hub_image_name::docker.io/${DOCKER_IMAGE}
+          echo ::set-output name=ghcr_image_name::ghcr.io/${DOCKER_IMAGE}
           echo ::set-output name=version::latest
-      - name: Docker Login
+      - name: Login to Docker Hub
         if: success()
-        run: |
-          echo "${DOCKER_PASSWORD}" | docker login ${DOCKER_REGISTRY} --username "${DOCKER_USERNAME}" --password-stdin
-      - name: Build image with buildx
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Build image for Docker Hub
         if: success()
         run: |
           docker buildx build \
             --platform ${{ steps.prepare.outputs.docker_platform }} \
-            --tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} \
+            --tag ${{ steps.prepare.outputs.docker_hub_image_name }}:${{ steps.prepare.outputs.version }} \
             --file ./Dockerfile-simple-layered \
             --output type=image,push=true .
       - name: Login to GitHub Container Registry
@@ -105,8 +106,11 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish image to GitHub Container Registry
+      - name: Build image for GHCR
         if: success()
         run: |
-          docker tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} ghcr.io/fred4jupiter/fredbet:${{ steps.prepare.outputs.version }}
-          docker push ghcr.io/fred4jupiter/fredbet:${{ steps.prepare.outputs.version }}
+          docker buildx build \
+            --platform ${{ steps.prepare.outputs.docker_platform }} \
+            --tag ${{ steps.prepare.outputs.ghcr_image_name }}:${{ steps.prepare.outputs.version }} \
+            --file ./Dockerfile-simple-layered \
+            --output type=image,push=true .      
