--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -91,14 +91,6 @@ jobs:
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Build image for Docker Hub
-        if: success()
-        run: |
-          docker buildx build \
-            --platform ${{ steps.prepare.outputs.docker_platform }} \
-            --tag ${{ steps.prepare.outputs.docker_hub_image_name }}:${{ steps.prepare.outputs.version }} \
-            --file ./Dockerfile-simple-layered \
-            --output type=image,push=true .
       - name: Login to GitHub Container Registry
         if: success()
         uses: docker/login-action@v2
@@ -106,11 +98,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build image for GHCR
+      - name: Build and push image
         if: success()
         run: |
           docker buildx build \
             --platform ${{ steps.prepare.outputs.docker_platform }} \
+            --tag ${{ steps.prepare.outputs.docker_hub_image_name }}:${{ steps.prepare.outputs.version }} \
             --tag ${{ steps.prepare.outputs.ghcr_image_name }}:${{ steps.prepare.outputs.version }} \
             --file ./Dockerfile-simple-layered \
-            --output type=image,push=true .      
+            --output type=image,push=true .
