--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -32,63 +32,51 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Print release version
         run: "echo 'New release Version: ${{steps.version_update.outputs.release-version}}'"
-  build_push_ghcr_amd64:
+  build_push_buildx:
     runs-on: ubuntu-latest
-    needs: build_tag_repo
-    steps:
-      - name: Checkout the tagged code
-        uses: actions/checkout@v3
-        with:
-          ref: ${{needs.build_tag_repo.outputs.release_version}}
-      - name: Set up JDK 17 for deploy to GitHub Container Registry
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '17'
-          server-id: ghcr.io
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Publish to GitHub Container Registry
-        run: mvn -B compile jib:build -Dimage=ghcr.io/fred4jupiter/fredbet:${{needs.build_tag_repo.outputs.release_version}}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  build_push_docker_hub_buildx:
-    runs-on: ubuntu-latest
-    needs: build_tag_repo
+    needs: build
     env:
-      DOCKER_REGISTRY: docker.io
       DOCKER_IMAGE: fred4jupiter/fredbet
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
       DOCKER_TARGET_PLATFORM: linux/arm64/v8,linux/amd64
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
         with:
           ref: ${{needs.build_tag_repo.outputs.release_version}}
+      - name: Build with Maven
+        run: mvn -B verify
+      - name: Extract jar for layered image building
+        run: java -Djarmode=layertools -jar target/fredbet.jar extract
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       - name: Prepare
         if: success()
         id: prepare
         run: |
           echo ::set-output name=docker_platform::${DOCKER_TARGET_PLATFORM}
-          echo ::set-output name=docker_image::${DOCKER_REGISTRY}/${DOCKER_IMAGE}
+          echo ::set-output name=docker_hub_image_name::docker.io/${DOCKER_IMAGE}
+          echo ::set-output name=ghcr_image_name::ghcr.io/${DOCKER_IMAGE}
           echo ::set-output name=version::${{needs.build_tag_repo.outputs.release_version}}
-      - name: Docker Login
+      - name: Login to Docker Hub
         if: success()
-        run: |
-          echo "${DOCKER_PASSWORD}" | docker login ${DOCKER_REGISTRY} --username "${DOCKER_USERNAME}" --password-stdin
-      - name: Build image with buildx
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Login to GitHub Container Registry
+        if: success()
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push image
         if: success()
         run: |
           docker buildx build \
             --platform ${{ steps.prepare.outputs.docker_platform }} \
-            --tag ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} \
-            --file ./Dockerfile-buildx \
+            --tag ${{ steps.prepare.outputs.docker_hub_image_name }}:${{ steps.prepare.outputs.version }} \
+            --tag ${{ steps.prepare.outputs.ghcr_image_name }}:${{ steps.prepare.outputs.version }} \
+            --file ./Dockerfile-simple-layered \
             --output type=image,push=true .
