--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -2,7 +2,7 @@ name: Publish Release
 on:
   push:
     branches:
-      - master
+      - 'master'
 jobs:
   build_tag_repo:
     runs-on: ubuntu-latest
