changed release name

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -106,7 +106,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{needs.build_tag_repo.outputs.release_version}}
+          release_name: Release ${{needs.build_tag_repo.outputs.release_version}}
           draft: false
           prerelease: false
