--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -100,6 +100,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{needs.build_tag_repo.outputs.release_version}}
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@latest
@@ -110,3 +115,4 @@ jobs:
           release_name: Release ${{needs.build_tag_repo.outputs.release_version}}
           draft: false
           prerelease: false
+          body: ${{steps.github_release.outputs.changelog}}
