added postgres backup

--- a/extra/docker-compose/traefik_letsencrypt/.env.template
+++ b/extra/docker-compose/traefik_letsencrypt/.env.template
@@ -3,3 +3,5 @@ EMAIL_ADDRESS=mailme@gmail.com
 DB_USERNAME=fred
 DB_PASSWORD=fred
 DB_DATABASE_NAME=fredbetdb
+BACKUP_PASSPHRASE=BackMeUp!
+S3_BUCKET_NAME=mybackupbucket
