--- a/extra/docker-compose/traefik_letsencrypt/docker-compose.yml
+++ b/extra/docker-compose/traefik_letsencrypt/docker-compose.yml
@@ -57,5 +57,17 @@ services:
       - POSTGRES_USER=${DB_USERNAME}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_DATABASE_NAME}
-      
+  backup:
+    image: eeshugerman/postgres-backup-s3:14
+    environment:
+      - SCHEDULE=@hourly
+      - BACKUP_KEEP_DAYS=7     # optional
+      - PASSPHRASE=${BACKUP_PASSPHRASE}
+      - S3_REGION=eu-central-1
+      - S3_BUCKET=${S3_BUCKET_NAME}
+      - S3_PREFIX=backup
+      - POSTGRES_HOST=postgres
+      - POSTGRES_DATABASE=${DB_DATABASE_NAME}
+      - POSTGRES_USER=${DB_USERNAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
       
