--- a/src/main/resources/TranslationMessages.properties
+++ b/src/main/resources/TranslationMessages.properties
@@ -624,3 +624,4 @@ administration.runtime.configuration.theme=Layout Theme
 administration.runtime.configuration.layout=Layout
 administration.runtime.configuration.navbarlayout=Navbar Layout
 user.edited.notAllowed=Sie sind nicht berechtigt diesen Benutzer zu bearbeiten!
+language.sv=schwedisch
