--- a/.github/workflows/publish-docker-latest.yml
+++ b/.github/workflows/publish-docker-latest.yml
@@ -53,14 +53,6 @@ jobs:
         run: mkdir -p snapshot-dependencies
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Prepare
-        if: success()
-        id: prepare
-        run: |
-          echo ::set-output name=docker_platform::${DOCKER_TARGET_PLATFORM}
-          echo ::set-output name=docker_hub_image_name::docker.io/${DOCKER_IMAGE}
-          echo ::set-output name=ghcr_image_name::ghcr.io/${DOCKER_IMAGE}
-          echo ::set-output name=version::latest
       - name: Login to Docker Hub
         if: success()
         uses: docker/login-action@v2
@@ -79,8 +71,8 @@ jobs:
         if: success()
         run: |
           docker buildx build \
-            --platform ${{ steps.prepare.outputs.docker_platform }} \
-            --tag ${{ steps.prepare.outputs.docker_hub_image_name }}:${{ steps.prepare.outputs.version }} \
-            --tag ${{ steps.prepare.outputs.ghcr_image_name }}:${{ steps.prepare.outputs.version }} \
+            --platform ${DOCKER_TARGET_PLATFORM} \
+            --tag docker.io/${DOCKER_IMAGE}:latest \
+            --tag ghcr.io/${DOCKER_IMAGE}:latest \
             --file ./Dockerfile-simple-layered \
             --output type=image,push=true .
