--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -62,14 +62,6 @@ jobs:
         run: java -Djarmode=layertools -jar target/fredbet.jar extract
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Prepare
-        if: success()
-        id: prepare
-        run: |
-          echo ::set-output name=docker_platform::${DOCKER_TARGET_PLATFORM}
-          echo ::set-output name=docker_hub_image_name::docker.io/${DOCKER_IMAGE}
-          echo ::set-output name=ghcr_image_name::ghcr.io/${DOCKER_IMAGE}
-          echo ::set-output name=version::${{needs.build_tag_repo.outputs.release_version}}
       - name: Login to Docker Hub
         if: success()
         uses: docker/login-action@v2
@@ -88,9 +80,9 @@ jobs:
         if: success()
         run: |
           docker buildx build \
-            --platform ${{ steps.prepare.outputs.docker_platform }} \
-            --tag ${{ steps.prepare.outputs.docker_hub_image_name }}:${{ steps.prepare.outputs.version }} \
-            --tag ${{ steps.prepare.outputs.ghcr_image_name }}:${{ steps.prepare.outputs.version }} \
+            --platform ${DOCKER_TARGET_PLATFORM} \
+            --tag docker.io/${DOCKER_IMAGE}:${{needs.build_tag_repo.outputs.release_version}} \
+            --tag ghcr.io/${DOCKER_IMAGE}:${{needs.build_tag_repo.outputs.release_version}} \
             --file ./Dockerfile-simple-layered \
             --output type=image,push=true .
   create_release:
