--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ logging:
     root: WARN
     org.springframework.web: WARN
     org.springframework.security: WARN
-    de.fred4jupiter.fredbet: DEBUG
+    de.fred4jupiter.fredbet: INFO
 
 server:
   servlet:
