--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -27,7 +27,7 @@ jobs:
         run: mvn -B verify
       - name: Update to release version and tag
         id: version_update
-        uses: fred4jupiter/maven-version-update-action@v4
+        uses: fred4jupiter/maven-version-update-action@v5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Print release version
@@ -85,23 +85,15 @@ jobs:
             --tag ghcr.io/${DOCKER_IMAGE}:${{needs.build_tag_repo.outputs.release_version}} \
             --file ./Dockerfile-simple-layered \
             --output type=image,push=true .
-  create_release:
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    needs: build_tag_repo
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          ref: ${{needs.build_tag_repo.outputs.release_version}}
-      - name: Build Changelog
-        id: github_release
+            - name: Create changelog
+        id: create_changelog
         uses: mikepenz/release-changelog-builder-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release
         id: create_release
-        uses: actions/create-release@latest
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
@@ -109,4 +101,4 @@ jobs:
           release_name: Release ${{needs.build_tag_repo.outputs.release_version}}
           draft: false
           prerelease: false
-#          body: ${{steps.github_release.outputs.changelog}}
+#          body: ${{steps.create_changelog.outputs.changelog}}
