create changelog from commits

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -83,11 +83,11 @@ jobs:
             --tag ghcr.io/${DOCKER_IMAGE}:${{needs.build_tag_repo.outputs.release_version}} \
             --file ./Dockerfile-simple-layered \
             --output type=image,push=true .
-      - name: Create changelog
-        id: create_changelog
-        uses: mikepenz/release-changelog-builder-action@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Generate changelog
+        id: changelog
+        uses: metcalfc/changelog-generator@v4.0.1
+        with:
+          myToken: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
@@ -98,4 +98,4 @@ jobs:
           release_name: Release ${{needs.build_tag_repo.outputs.release_version}}
           draft: false
           prerelease: false
-#          body: ${{steps.create_changelog.outputs.changelog}}
+          body: ${{steps.changelog.outputs.changelog}}
