correct some german messages

--- a/src/main/resources/TranslationMessages.properties
+++ b/src/main/resources/TranslationMessages.properties
@@ -15,7 +15,7 @@ administration.excel.export.allBets                                      = Alle 
 administration.excel.export.extraBets                                    = Alle Bonus-Tipps
 administration.excel.export.pointsCount                                  = Auflistung Punkteh\u00E4ufigkeit
 administration.excel.export.title                                        = Excel Export
-administration.msg.backup.error.noInMemory                               = Backup von In-Memory Datenbanken werden nicht unterst\u00FCtzt. Bitte verwenden Sie eine H2 file-basierte Datenbank!
+administration.msg.backup.error.noInMemory=Backup von In-Memory Datenbanken werden nicht unterst\u00FCtzt. Bitte verwende eine H2 file-basierte Datenbank!
 administration.msg.backup.error.unknown                                  = Es ist ein Fehler beim Datenbank-Backup aufgetreten: {0}
 administration.msg.backup.error.unsupportedDatabase                      = Das Datenbank-Backup wird nur bei Verwendung einer H2-Datenbank unterst\u00FCtzt!
 administration.msg.info.allBetsAndMatchesDeleted                         = Alle Tipps und Spiele wurden gel\u00F6scht
@@ -322,7 +322,7 @@ excel.upload.button                    = Datei hochladen
 excel.upload.file                      = Excel-Datei hochladen
 excel.upload.msg.failed                = Es ist ein Fehler beim Import der Excel-Datei aufgetreten. Grund: {0}
 excel.upload.msg.noExcelFile           = Die hochgeladene Datei ist keine Excel-Datei (.xlsx)!
-excel.upload.msg.noFileGiven           = Bitte w\u00E4hlen Sie die Excel-Datei zum Hochladen!
+excel.upload.msg.noFileGiven=Bitte wähle die Excel-Datei zum Hochladen aus!
 excel.upload.msg.saved                 = Die Excel-Datei wurde erfolgreich importiert!
 
 extra_bets.finalWinner      = Meister
@@ -369,7 +369,7 @@ group.title.roundOfSixteen   = Achtelfinale
 group.title.semiFinal        = Halbfinale
 
 image.gallery.downloadAll             = Alle Fotos herunterladen
-image.gallery.msg.delete.perm.denied  = Sie k\u00F6nnen nur Ihre eigenen Fotos l\u00F6schen!
+image.gallery.msg.delete.perm.denied=Du kannst nur deine eigenen Fotos löschen!
 image.gallery.msg.deleted             = Das Foto wurde gel\u00F6scht!
 image.gallery.msg.noImages            = Keine Fotos vorhanden!
 image.gallery.title                   = Fotoalbum
@@ -378,7 +378,7 @@ image.group.button.delete             = Gruppe l\u00F6schen
 image.group.id                        = Gruppen ID
 image.group.msg.added                 = Die Gruppe mit dem Namen "{0}" wurde hinzugef\u00FCgt!
 image.group.msg.deleted               = Die Gruppe wurde gel\u00F6scht!
-image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte l\u00F6schen Sie die Fotos zuerst!
+image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte lösche die Fotos zuerst!
 image.group.msg.groupExist            = Eine Gruppe mit dem Namen "{0}" existiert bereits!
 image.group.msg.updated               = Die Gruppe "{0}" wurde aktualisiert!
 image.group.name                      = Gruppenname
@@ -392,7 +392,7 @@ image.upload.groupName                = Gruppe
 image.upload.id                       = Foto ID
 image.upload.msg.editGroup            = Gruppen bearbeiten
 image.upload.msg.failed               = Fehler beim Speichern des Fotos!
-image.upload.msg.noFileGiven          = Bitte w\u00E4hlen Sie zun\u00E4chst eine Datei aus!
+image.upload.msg.noFileGiven=Bitte wähle zuerst eine Datei aus!
 image.upload.msg.noJpegImage          = Es sind nur Fotos vom Typ JPEG erlaubt!
 image.upload.msg.saved                = Das Foto wurde erfolgreich gespeichert!
 image.upload.rotate                   = Rotation
@@ -413,7 +413,7 @@ language.pl = polnisch
 
 lastlogins.title = Letzte Logins der Benutzer
 
-login.autologin.tooltip    = Auto-Login bewirkt, dass Sie sich nicht erneut anmelden m\u00FCssen, wenn die Benutzer-Session abgelaufen ist.
+login.autologin.tooltip    = Auto-Login bewirkt, dass du dich nicht erneut anmelden musst, wenn die Benutzer-Session abgelaufen ist.
 login.button.login         = Anmelden
 login.placeholder.password = Passwort
 login.placeholder.username = Benutzername
@@ -449,8 +449,8 @@ msg.bet.betting.error.matchInProgress  = Das Spiel hat bereits begonnen! Keine T
 msg.bet.betting.error.oldPasswordWrong = Das alte Passwort ist falsch!
 msg.bet.betting.info.allBetted         = Derzeit alle Spiele getippt!
 msg.bet.betting.warn.extraBetOpen      = Du hast deinen Bonus-Tipp noch nicht abgegeben!
-msg.input.complete.date.time           = Bitte geben Sie Datum und Uhrzeit ein!
-msg.input.complete.result              = Bitte geben Sie beide Tore an!
+msg.input.complete.date.time           = Bitte gebe das Datum und die Uhrzeit ein!
+msg.input.complete.result              = Bitte gebe beide Tore an!
 msg.match.created                      = Spiel {0} gegen {1} angelegt!
 msg.match.deleted                      = Das Spiel {0} gegen {1} wurde gel\u00F6scht!
 msg.match.notFound                     = Das Match mit der ID {0} kann nicht gefunden werden!
@@ -506,7 +506,7 @@ statistics.title                   = Punkte-Statistik
 systeminfo.title = Systeminformationen
 
 upcoming.matches = anstehende Spiele
-user.changePassword.firstLogin=Sie melden sich das erste mal an oder Ihr Passwort wurde zur\u00FCckgesetzt. \u00C4ndern Sie daher ihr Passwort!
+user.changePassword.firstLogin=Du meldest dich das erste mal an oder dein Passwort wurde zur\u00FCckgesetzt. Bitte ändere daher dein Passwort!
 user.create.child                            = Kind
 user.create.password                         = Passwort
 user.create.roles                            = Rolle
@@ -568,7 +568,7 @@ administration.runtime.configuration.selfRegistrationEnabled=Selbstregistrierung
 administration.runtime.configuration.selfRegistrationEnabled.tooltip=Mit der Selbstregistrierung haben Benutzer die Möglichkeit selbst einen Account anzulegen.
 msg.registration.error.invalidToken=Der eingegebene Registrierungs-Code ist ungültig!
 back.to.login=Zurück zum Login
-msg.registration.info.success=Die Registrierung war erfolgreich. Sie können sich nun anmelden.
+msg.registration.info.success=Die Registrierung war erfolgreich. Du kannst dich nun anmelden.
 registration.password=Passwort
 registration.passwordRepeat=Passwortwiederholung
 administration.runtime.configuration.misc=Diverse Einstellungen
@@ -580,8 +580,8 @@ user.importexport.title=Benutzerdaten Im-/Export
 user.importexport.export.name=Benutzerdaten exportieren
 user.importexport.export.users=Benutzerdaten als JSON exportieren
 user.importexport.import.file=Benutzerdaten importieren (JSON-Datei)
-user.importexport.upload.button=JSON-Datei hochladen 
-user.importexport.upload.msg.noFileGiven=Bitte wählen Sie eine Datei aus.
+user.importexport.upload.button=JSON-Datei hochladen
+user.importexport.upload.msg.noFileGiven=Bitte wähle eine Datei aus.
 user.importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
 user.importexport.upload.msg.saved=Es wurden {0} Benutzer importiert.
 user.importexport.upload.msg.failed=Es ist ein Fehler beim Import von Benutzerdaten gekommen. Fehler: {0}
@@ -612,7 +612,7 @@ importexport.export.name=Daten exportieren
 importexport.export.data=Daten als JSON exportieren
 importexport.import.file=Daten importieren (JSON-Datei)
 importexport.upload.button=JSON-Datei hochladen
-importexport.upload.msg.noFileGiven=Bitte wählen Sie eine Datei aus.
+importexport.upload.msg.noFileGiven=Bitte wähle eine Datei aus.
 importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
 importexport.upload.msg.saved=Datenimport abgeschlossen.
 importexport.upload.msg.failed=Es ist ein Fehler beim Import gekommen. Fehler: {0}
@@ -623,5 +623,5 @@ country.cat=Katalonien
 administration.runtime.configuration.theme=Layout Theme
 administration.runtime.configuration.layout=Layout
 administration.runtime.configuration.navbarlayout=Navbar Layout
-user.edited.notAllowed=Sie sind nicht berechtigt diesen Benutzer zu bearbeiten!
+user.edited.notAllowed=Du hast keine Berechtigungen diesen Benutzer zu bearbeiten!
 language.sv=schwedisch
