--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
 
 logging:
   pattern:
-    console: "%highlight(%d %-5level [%c] - %msg%n)"
+    console: "%black(%d{ISO8601}) %highlight(%-5level) %yellow(%C{1.}): %msg%n%throwable"
   level:
     de.fred4jupiter.fredbet: DEBUG
 
