--- a/pom.xml
+++ b/pom.xml
@@ -139,10 +139,10 @@
             <artifactId>popper.js</artifactId>
             <version>1.16.0</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.webjars</groupId>-->
-        <!--            <artifactId>webjars-locator-core</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
