--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,10 @@
 # Step : Test and package
 FROM maven:3.8.5-openjdk-17 as builder
 WORKDIR /build
-COPY pom.xml .
+COPY ../pom.xml .
 
-COPY src/ /build/src/
-COPY .git /build/.git/
+COPY ../src/ /build/src/
+COPY ../.git /build/.git/
 RUN mvn -B -DskipTests package
 
 # Step : Package image
