--- a/docker/Dockerfile-layered
+++ b/docker/Dockerfile-layered
@@ -1,9 +1,9 @@
 FROM maven:3.8.4-openjdk-17 as builder
 WORKDIR /build
 
-COPY pom.xml .
-COPY src/ /build/src/
-COPY .git /build/.git/
+COPY ../pom.xml .
+COPY ../src/ /build/src/
+COPY ../.git /build/.git/
 RUN mvn -B dependency:go-offline -DskipTests package
 
 ARG JAR_FILE=target/*.jar
