--- a/Dockerfile-simple-layered
+++ b/Dockerfile-simple-layered
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17-jre-focal
+FROM eclipse-temurin:21-jre-jammy
 LABEL maintainer="Michael Staehler"
 
 ENV JAVA_OPTS="-Duser.timezone=Europe/Berlin"
