--- a/extra/docker-compose/traefik_letsencrypt/.env.template
+++ b/extra/docker-compose/traefik_letsencrypt/.env.template
@@ -1,4 +1,4 @@
-DOMAIN_NAMES="`www.yourdomain.com`"
+DOMAIN_NAMES="`www.yourdomain.com`,`yourdomain.com`"
 EMAIL_ADDRESS=mailme@gmail.com
 DB_USERNAME=fred
 DB_PASSWORD=fred
