added example for jqassistant-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,21 @@
 <!--                    </execution>-->
 <!--                </executions>-->
 <!--            </plugin>-->
+
+            <!-- steps to perform: mvn verify, mvn jqassistant:server, open URL at https://localhost:7474 -->
+<!--            <plugin>-->
+<!--                <groupId>com.buschmais.jqassistant</groupId>-->
+<!--                <artifactId>jqassistant-maven-plugin</artifactId>-->
+<!--                <version>2.5.0</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>scan</goal>-->
+<!--                            <goal>analyze</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
